# profiling-llms-llama-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  measurements.csv
.devops/: dev.Dockerfile
09A-backend/: .gitignore  CMakeLists.txt  DatabaseAdapter.py  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_HIERARCHICAL.md  RUNNING_UI.txt  Roofline-api.py  Roofline.py  Roofline_api.py  analysis.py  data_processor.py  db.md  db_queries.py  db_to_csv.py  dev-main.sh  dev.ps1  dev.sh  docker-compose.yml  energy_measure.py  event_retriever.py  generate_csv.py  heatmap.py  install.sh  kv_measure.py  llama-probe.cpp  main.py  measurements_complementation.py  metrics.py  papi.py  python_install_cmds.md  read_data.py  requirements.txt  roofline_plot.py  run_handler.py  server.py  tui.py  visualization.py
09A-backend/llama-measuring/: CMakeLists.txt  energy-measure.cpp  energy-measure.h  kv-measure.cpp  llama-energy.cpp  llama-measurement-decoder-block-view.cpp  llama-measurement-phase-view.cpp  llama-measurement-top-view.cpp  llama-papi.cpp  utils.cpp  utils.h
09A-backend/migrations/001-init/: dev.ps1  docker-compose.yml  tables.sql  triggers.sql  views.sql
09A-backend/testdata/: test-data.csv
09A-backend/tests/: conftest.py  helpers.py  test_decoder_blocks.py  test_papi_column_interference.py  test_papi_interference.py  test_phase_view.py  test_top_view.py
09A-frontend/: index.html  index2.html
09A-frontend/web-interface/: .env.example  README.md  index.html  metadata.json  package-lock.json  vite.config.ts
09A-frontend/web-interface/public/: top-view.json
09A-frontend/web-interface/src/: App.tsx  index.css  types.ts
09A-frontend/web-interface/src/components/: AttentionMLPView.tsx  DecoderBlockView.tsx  Heatmap.tsx  LayerView.tsx  ModelSelectionView.tsx  PhaseView.tsx  PromptsView.tsx  RooflineChart.tsx  Sidebar.tsx  TopBar.tsx  TopView.tsx
09A-frontend/web-interface/src/controller/: AppContext.tsx  ControlPanel.tsx  Controller.tsx
09A-frontend/web-interface/src/utils/: roofline.ts
09A-frontend/web-interface/temp_json_data/: decoder-block-view.json  phase-view.json  roofline.json
examples/eval-callback/: CMakeLists.txt  eval-callback.cpp
examples/kv-measure/: CMakeLists.txt  kv-measure.cpp
examples/llama-energy/: CMakeLists.txt  llama-energy.cpp
models/: README.md  download_model.py
